# myFinalProject

./: .gitignore  logger_setup.py  pyproject.toml  pytest.ini
pages/: base_page.py  home_page.py  login_page.py  my_books_page.py  my_loans_page.py  privacy_settings_page.py  search_bar.py
tests/: conftest.py  data.xml  test_api.py  test_home_page.py  test_login.py  test_my_books.py  test_my_loans.py  test_privacy_settings.py  test_search_bar.py
