[tool.poetry]
name = "openlibrary"
version = "0.1.0"
description = "final autoamation project"
authors = ["melisak <melisak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pytest-playwright = "^0.5.1"
smart-assertions = "^1.0.2"
allure-pytest = "^2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
